Finished CSS, added test.md, 3 new pictures and byline.md

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -2,5 +2,20 @@
 ---
 Redovisning kmom01
 =========================
+####Är du sedan tidigare van att jobba i ramverk för att bygga webbplatser?
+Nej, det är helt nytt för mig. Hade svårigheter med att få att fungera först. Men tillslut så gick det!
+_________________
+####Det blev en del nya verktyg och tekniker i labbmiljön och för att jobba med redovisa sidan, är du bekant med några av dem sedan tidigare?
+Nej, Jag har inte använt någon av dem innan. Så det tog extra lång tid för mig att komma igång.
+_________________
+####Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarhet för webben?
+Det skulle jag inte säga. Men jag har alltid velat lära mig det och efter det här kursmomentet så känner jag mig säkrare.
+_________________
+####Hur kändes det att styla webbplatsen med CSS? Gick det bra?
+Kände mig osäker i början med efter suttit en del med det så känns det bättre. Hade en del problem med att styla tex articlen i "om" för
+då ändrades det också i redovisningssidan. Vilket jag inte ville.
+_________________
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+####Vilken är din TIL för detta kmom?
+Skulle nog säga olika sett att styla, känner mig säkrare på det nu. Kommer säkert vara ännu bättre efter kmom02.
+_________________
