--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -3,4 +3,38 @@
 Redovisning kmom03
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+####Hur känns det att vara styrd till ett vertikalt grid, hämmande eller stödjande?
+Jag tycker det hjälper en designa hemsidan så det ser snyggt ut. Dock så är det främmande för mig.
+Hade svårigheter med att hänga med 100% när vi räknade till exempel på kolumnerna och hur många columns
+de skulle ha. Tror jag bara behöver sitta lite mer med det. För jag förstår att det är 24 columns och man
+placerar ut classer till relation till dem. Känner bara att jag inte är helt hundra med matten.
+Men jag måste säga ändå att det var rätt häftigt att placera utt saker med hjälp av det vertikala griddet.
+Det var dock vissa grejer som inte funkade så som jag ville. Till exempel flash bilden täcker inte upp hela
+flash regionen. Så man ser den beiga bakgrunden till höger. Testade lite olika saker men inget blev perfekt.
+_________________
+####Hur känns det att jobba med ett typografiskt horisontellt/baseline grid, ser du någon poäng med det?
+Ja, man ser att texten är hyftsat aligned med resten. Vilket är en bra sak. Så saker inte ligger hokus pokus.
+Jag gillar även möjligheterna den gav en, design-mässigt. Att kunna ändra inprincip allt genom att bara
+skicka in ett värde till en variabel. Det tyckte jag var väldigt smidigt.
+______________________
+####Berätta om hur du valde typsnitt till din webbplats.
+Jag ville att webbplatsen skulle ha lätt läsbarhet. Att informationen skulle vara väldigt tydlig och lätt att hitta.
+Genom att ha stora rubriker och luftig bröd text-tycker jag att detta är åstadkommit.
+____________________
+####Har du jobbat med liknande gridbaserade layouttekniker sedan tidigare?
+Nej. Jag har aldrig jobbat med något liknande innan. Så det var mycket att ta in från början. Men när man väl började
+jobba praktiskt med det, gick det lättare. Måste säga att det är ändå ett rätt smidigt sätt att arbeta.
+Man skriver ju bara hur många columner classen ska fylla ut. Så istället för att hålla på med floats och margains
+använder man sig av att ändr antalet kolumner som de tar upp.  
+____________________
+####Hur känns det att jobba med LESS och moduler? Lyckas du återanvända moduler mellan teman för kmom02 och kmom03?
+Det känns bra. Jag lyckades använda modulerna men det förekom ändringar. Till exempel tog jag bort allt som placerade
+ut saker. Nu när jag skulle jobba med vertical grid var det nödvändigt. Men färger och boarders kunde jag
+återanvända till det här kursmomentet.
+____________________
+####Hur gick det med din responsivitet för webbplatsen?
+Det gick bra. Jag gick inte allt för hårt på det dock. Men de olika typer av kolumner (1, 2 och 3) har responsivitet.
+Efter har arbetat med responsivitet i kmom02 och kmom03 känns det som jag kan det rätt bra.
+____________________
+####Vilken är din TIL för detta kmom?
+Hur vertikala griddet fungerar. Med placering av kolumnerna.
