added themes and a report on colors

--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -2,5 +2,43 @@
 ---
 Redovisning kmom04
 =========================
+####Kommentera kort om skrivuppgiften, någon som är värt att nämna från arbetet med den?
+Jag har inte arbetat mycket med såna skrivuppgifter om ens några. Så det var bra att bli introducerad på det sättet som vi blev.
+Tyckte det var trevligt sätt att bli mer bekant med det upplägg som man använder. Jag tyckte det var nyttigt att reflektera över webbplatser
+och känslorna man får pga av deras färgval.
+_________________
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
+####Berätta kort om din tanke bakom respektive teman, hur tolkade du “minimalistisk”, “colorful” och “dark”.
+Med minimalistisk-tema så ville jag ha det så simpelt som möjligt. Mjuka färger och inga stora färgskilnader. Så använde analoger färger.
+Temat har också större typsnitt för att förhöja känslan av att sidan är luftig.
+
+Colorful skulle vara färgstarkt, så jag gjorde en triad med den primära färgen:    <table style="border-spacing: 4px; border-collapse: separate">
+<tr>
+<td style="height: 50px; width: 50px; background-color: #AF00B5">
+</tr>
+</table>
+De tre färgerna komplimenterar varandra väldigt bra och temat blivit väldigt färgstarkt, vilket var det jag ville uppnå.
+
+Det mörka temat har jag nästan bara nyanser av svart. Det förekommer också en mörk nyans av gul på länkar. Tolkade temat att det skulle vara så skonsamt för
+ögat som möjligt. Man ska kunna sitta med temat på natten utan att få ont i ögonen till exempel. Något som jag tycker att jag har åstadkommit.
+____________________
+####Vilket färgschema valde du till respektive tema och hur valde du att använda färgerna (mer eller mindre eller lika mycket av alla färger)?
+_________________
+Som jag pratade om ovan, minimalistisk tolkade jag som små färgändringar, det vill säga analoga. Det ska inte heller vara för starka.
+Colorful använde jag mig av en triad, normalt sett när man arbetar med triad så brukar en färg vara dominant och de andra mer subtila. I mitt Colorful
+var detta inte fallet.
+Dark är också en typ av analog tema där gul också förekommer för det syns bra men inte för bra på svart.
+####Valde du att jobba med accentfärg och isåfall hur?
+Bara till min dark där jag tog en stark gulfärg på loggan för att fånga ögonfokus. Men inte mer än det använde jag det.
+_________________
+####Hur tänkte du kring valet av typografi?
+Att colorful skulle vara lite rolig men ändå läslig. minimalistisk skulle vara lättläst och väldigt luftig.
+Dark skulle också vara väldigt lättläst så stora och lättlästa rubriker och text som är väldigt lätt att se.
+_________________
+####Berätta om din kodstruktur av teman, jobbade du med bastema och hur löste du anpassningarna till de olika temana?
+_________________
+Det jag gjorde var att jag skapade massa variabler. Så nästan det enda jag gjort för varje tema är att ändra några variabler.
+Det kändes som den lättaste vägen för mig och det funkade jättebra tycker jag.
+####Vilken är din TIL för detta kmom?
+Lärt mig massa om färger och sådant så färgkombinationer och vad de ger för känslor är mitt TIL. varit väldigt intressant kmom!.
+_________________
